fix: adjust expense display on friend's profile and enable data retrieval by username